--- a/index.html
+++ b/index.html
@@ -5,52 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jenett Jose | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
         <h1>Jenett Jose</h1>
-        <p>Welcome to my portfolio.<br>Crafting compelling visual stories through editing, writing, and filmmaking.</p>
-        <nav>
-            <a href="#video">Video Editing</a>
-            <a href="#films">Short Films</a>
-            <a href="#writings">Writings</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-        </nav>
+        <p>Crafting compelling visual stories through editing, writing, and filmmaking.</p>
     </header>
-
-    <section id="video">
-        <h2>Video Editing</h2>
-        <p>Embed your YouTube, Drive, or Instagram videos here.</p>
-        <!-- Example -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/example" frameborder="0" allowfullscreen></iframe>
-    </section>
-
-    <section id="films">
-        <h2>Short Films</h2>
-        <p>Posters, trailers, and details about short films you've worked on.</p>
-    </section>
-
-    <section id="writings">
-        <h2>Writings</h2>
-        <p>Links to your writings or previews.</p>
-    </section>
-
     <section id="about">
         <h2>About Me</h2>
-        <p>I’m Jenett Jose, a media professional passionate about editing, storytelling, and content creation.
-        With experience across short-form and long-form edits, article writing, and film work, I bring a narrative-first approach to every project I take on.</p>
+        <p>[Your bio goes here]</p>
     </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: your-email@example.com</p>
-        <p>Instagram: @yourhandle</p>
+    <section id="work">
+        <h2>My Work</h2>
+        <p>Embed YouTube, Drive, and Instagram videos here.</p>
     </section>
-
+    <section id="writings">
+        <h2>Writings</h2>
+        <p>List or embed articles/PDFs here.</p>
+    </section>
+    <section id="education">
+        <h2>Education</h2>
+        <p>Master’s in Mass Communication and Journalism – St. Joseph’s University</p>
+    </section>
     <footer>
-        <p>© 2025 Jenett Jose. All rights reserved.</p>
+        <p>Contact: [your email or links]</p>
     </footer>
 </body>
 </html>
